Add and use a first quizz as json format

--- a/web/megaquizz.html
+++ b/web/megaquizz.html
@@ -7,16 +7,12 @@
     <link rel="stylesheet" href="megaquizz.css">
   </head>
   <body>
-    <h1>MegaQuizz</h1>
-    
-    <p>MegaQuizz vous permettra d'apprendre tout en s'amusant ;-)</p> 
-    
-    <div id="sample_container_id">
-      <p id="sample_text_id"></p>
-    </div>
+    <h1 id="title">MegaQuizz</h1>
+    <h2 id="sub_title">Pour apprendre tout en jouant</h2> 
+    <div id="sample_container_id"></div>
 
-    <!-- ))<script type="application/dart" src="megaquizz.dart"></script> -->
-    <!-- <script src="packages/browser/dart.js"></script> -->
+   <!-- <script type="application/dart" src="megaquizz.dart"></script>
+    <script src="packages/browser/dart.js"></script> -->
     <script type="text/javascript" src="megaquizz.dart.js"></script>
   </body>
 </html>
